--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,20 +1,14 @@
 .App {
   text-align: center;
+  background: url(https://i.imgur.com/FNFqCGu.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  background-color: rgb(128, 128, 238);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -28,11 +22,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
