--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .NavBar-welcome {
   display: block;
-  color: rgb(253, 251, 251);
+  color:  rgb(90, 9, 141);
   margin-top: 8px;
   /* font-weight: bold; */
   font-size: 25px;
@@ -14,7 +14,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: rgba(85, 6, 43, 0.63);
+  background-color: rgba(255, 255, 255, 0.63);
 }
 
 li {
@@ -23,18 +23,18 @@ li {
 
 li a{
   display: block;
-  color: rgb(189, 185, 185);
+  color: rgb(122, 116, 116);
   /* font-weight: bold; */
-  font-size: larger;
+  font-size: 25px;
   text-align: center;
-  padding: 8px 16px;
+  padding: 7px 16px;
   text-decoration: none;
 }
 
 .AppLogo {
   float: left;
   display: block;
-  color: white;
+  color: rgb(90, 9, 141);
   font-weight: bold;
   font-size: 30px;
   text-align: center;
@@ -43,7 +43,7 @@ li a{
 }
 
 li a:hover:not(.active) {
-  background-color: rgb(177, 67, 192);
+  background-color: rgb(255, 255, 255);
 }
 
 .active {
