--- a/src/components/DashboardEventList/DashboardEventList.css
+++ b/src/components/DashboardEventList/DashboardEventList.css
@@ -1,3 +1,20 @@
 .home-link {
     margin-top: 0rem;
 }
+
+
+.dashboard-list {
+    border-collapse: collapse;
+    font-size: 40px;
+    display: inline-block;
+  }
+  .dashboard-th {
+    background-color: rgb(91, 11, 116);
+    font-weight: bold;
+  }
+  .dashboard-th, .guest-table-td {
+    border: 2px solid rgb(91, 11, 116);
+    line-height: 2.5rem;
+    padding: .5rem;
+    text-align: left;
+  }
