--- a/src/components/EventRow/EventRow.css
+++ b/src/components/EventRow/EventRow.css
@@ -3,10 +3,10 @@
     border-color: rgb(82, 7, 117);
     color: white;
     border: solid 1px;
-    border-radius: 5px;
     margin-right: 5px;
     margin-left: 5px;
     font-size: 20px;
     height: 50px;
     font-weight: bold;
+    cursor: pointer;
 }
